<resources>
    <string name="app_name">Coffee Nix</string>
    <string name="google_map_api_key">AIzaSyAG-wT3JGTWksAvcpkAAUKct9jZADqmROk</string>

    <!-- Login View -->
    <string name="loginTitle">INICIO DE SESIÓN</string>
    <string name="loginBtnText">INICIAR SESIÓN</string>
    <string name="loginCreateAccount">REGISTRATE</string>
    <string name="loginTextCreateAccount">¿Aún no tienes cuenta?</string>
    <string name="loginHintEmail">Correo electrónico:</string>
    <string name="loginHintPsw">Contraseña:</string>

    <!-- Register View -->
    <string name="RegisterTitle">Crear una cuenta</string>
    <string name="RegisterBtnText">REGISTRAR</string>
    <string name="RegisterHintName">Nombre:</string>
    <string name="RegisterHintPhone">Telefono:</string>
    <string name="RegisterHintEmail">Correo electrónico:</string>
    <string name="RegisterHintPsw">Contraseña:</string>
    <string name="RegisterHintConfirmPsw">Confirmar contraseña:</string>

    <!-- Select Roles View -->
    <string name="SelectRolesTitle">Selección de Rol</string>

    <!-- Save Image View -->
    <string name="SaveImageViewTitle">Agrega una imagen a tu perfil</string>
    <string name="SaveImageViewBtnSave">GUARDAR</string>
    <string name="SaveImageViewBtnClose">OMITIR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txtCloseSession">CERRAR SESIÓN</string>

    <!-- Client Update View -->
    <string name="clientUpdateBtn">ACTUALIZAR</string>

    <!-- Client Profile Fragment -->
    <string name="clientProfileFragmentBtn">EDITAR DATOS</string>

    <!-- Admin Home-->
    <string name="adminHomeToolbarTitle">¿Qué deseas hacer?</string>
    <string name="adminHomeCardViewOrdersTitle">Ver pedidos</string>
    <string name="adminHomeCardViewProfileTitle">Editar perfil</string>
    <string name="adminHomeCardViewCategoryTitle">Agregar nueva categoria</string>
    <string name="adminHomeCardViewProductsTitle">agragar nuevo producto</string>

    <!-- Admin Create Category View-->
    <string name="adminCategoryToolbarTitle">Crear nueva categoria</string>
    <string name="adminCategoryBtnText">CREAR CATEGORIA</string>
    <string name="adminCategoryTextImage">Agrega una imagen de la categoria</string>

    <!-- Admin Create Products View-->
    <string name="adminProductToolbarTitle">Crear nuevo producto</string>
    <string name="adminProductBtnText">AGREGAR PRODUCTO</string>
    <string name="adminProductsTextImage">Agrega una o mas imagenes del producto</string>
    <string name="adminProductsTextViewName">Nombre:</string>
    <string name="adminProductsTextViewCategory">Categoria:</string>
    <string name="adminProductsTextViewPrice">Precio:</string>
    <string name="adminProductsTextViewDes">Descripción</string>

    <!-- Admin Profile View-->
    <string name="adminProfileToolbarTitle">Perfil</string>

    <!-- Admin Edit Profile View-->
    <string name="adminEditProfileToolbarTitle">Editar perfil</string>

    <!-- Admin Orders View-->
    <string name="adminOrdersToolbarTitle">Todos los pedidos</string>

    <!-- Client Categories View-->
    <string name="clientCategoriesToolbarTitle">Categorias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Client Products View-->
    <string name="clientProductToolbarTitle">Productos</string>

    <!-- Client Products Detail View-->
    <string name="clientProductDetailBtn">AGREGAR PRODUCTO</string>

    <!-- Client Shopping Bag View-->
    <string name="clientShoppingBagBtn">CONTINUAR</string>
    <string name="clientShoppingBagTitle">Bolsa de compra</string>

    <!-- Client List Address View-->
    <string name="clientAddressListBtn">CONTINUAR</string>
    <string name="clientAddressListToolbar">Direcciones</string>
    <string name="clientaddressListTitle">Selecciona una dirección para continuar:</string>


    <!-- Client List Address View-->
    <string name="clientAddressCreateBtn">GUARDAR CAMBIOS</string>
    <string name="clientAddressCreateToolbar">Nueva dirección</string>
    <string name="clientAddressCreateTextName">Dirección</string>
    <string name="clientAddressCreateTextLoc">Municipio</string>
    <string name="clientAddressCreateTextRef">Punto de referencia</string>

    <!-- Client Orders Status -->
    <string name="ClientOrderStatusDate">Fecha del pedido: </string>
    <string name="ClientOrderStatusAddress">Entrega en: </string>
    <string name="ClientOrderStatusPay">Total: $</string>

    <!-- Client Orders Detail Title -->
    <string name="ClientOrderDetailTitle">Detalles del pedido</string>
    <string name="ClientOrderDetailClient">Cliente: </string>
    <string name="ClientOrderDetailAddress">Dirección de entrega: </string>
    <string name="ClientOrderDetailDate">Tiempo transcurrido: </string>
    <string name="ClientOrderDetailStatus">Estatus: </string>
    <string name="ClientOrderDetailTotal">TOTAL</string>


</resources>