<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:textSize="30sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/roboto_bold_condensed"
            android:layout_marginTop="10dp"

            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHintEmail"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/roboto_bold_condensed"
            android:layout_marginTop="10dp"
            android:layout_gravity="left"/>

        <EditText
            android:id="@+id/loginEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_one"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/saira_condensed_regular"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/textColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHintPsw"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/roboto_bold_condensed"
            android:layout_gravity="left" />

        <EditText
            android:id="@+id/loginEditTextPsw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/input_one"
            android:inputType="textPassword"
            android:fontFamily="@font/saira_condensed_regular"
            android:textSize="15sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/textColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_1"
            android:text="@string/loginBtnText"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_bold_condensed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginTextCreateAccount"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_bold_condensed"/>

            <Button
                android:id="@+id/loginBtnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/loginCreateAccount"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_bold_condensed"
                android:textColor="@color/colorTwo" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>