<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_outline_box_24"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B2000000"
                    android:text="@string/ClientOrderStatusDate"/>

                <TextView
                    android:id="@+id/cardviewOrdersStatusDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B3000000"
                    tools:text="10/01/2022"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B3000000"
                    android:text="@string/ClientOrderStatusAddress"/>

                <TextView
                    android:id="@+id/cardviewOrdersStatusAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B3000000"
                    tools:text="Calle Abasolo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B3000000"
                    android:text="@string/ClientOrderStatusPay"/>

                <TextView
                    android:id="@+id/cardviewOrdersStatusPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#B3000000"
                    tools:text="250.00"/>

            </LinearLayout>
            

        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#28000000"/>

</LinearLayout>