<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Cliente.address.create.ClientAddressCreateActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clientAddressCreateTextName"
            android:textSize="15sp"
            android:textColor="#A5A1A1"
            android:fontFamily="@font/roboto_bold_condensed"
            android:layout_gravity="start"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/clientAddressCreateName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input_one"
            android:inputType="text"
            android:fontFamily="@font/saira_condensed_regular"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clientAddressCreateTextLoc"
            android:textSize="15sp"
            android:textColor="#A5A1A1"
            android:fontFamily="@font/roboto_bold_condensed"
            android:layout_gravity="start"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/clientAddressCreateLoc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input_one"
            android:inputType="text"
            android:fontFamily="@font/saira_condensed_regular"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clientAddressCreateTextRef"
            android:textSize="15sp"
            android:textColor="#A5A1A1"
            android:fontFamily="@font/roboto_bold_condensed"
            android:layout_gravity="start"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/clientAddressCreateRef"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input_one"
            android:inputType="text"
            android:fontFamily="@font/saira_condensed_regular"
            android:textSize="15sp"
            android:textColor="@color/textColor"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:focusable="false"
            android:clickable="true"
            android:cursorVisible="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgroundColor"
        android:layout_gravity="bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clientAddressCreateBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_1"
            android:text="@string/clientAddressCreateBtn"
            android:textColor="@color/textColorLight"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/roboto_bold_condensed"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>