<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.home.adminOptions.categories.AdminCreateCategoryActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/action_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adminCategoryTextImage"
                android:textSize="15sp"
                android:textColor="#A5A1A1"
                android:fontFamily="@font/roboto_bold_condensed"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>


                <ImageView
                    android:id="@+id/adminImageViewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_image_24"
                    android:background="@drawable/bg_image_add"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RegisterHintName"
                android:textSize="15sp"
                android:textColor="#A5A1A1"
                android:fontFamily="@font/roboto_bold_condensed"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/adminCategoryEditTextName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/input_one"
                android:inputType="text"
                android:fontFamily="@font/saira_condensed_regular"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/textColor"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="55dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/adminCategoryAddBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_1"
                android:text="@string/adminCategoryBtnText"
                android:textColor="@color/textColorLight"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_bold_condensed"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

        </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>